--- a/composer.json
+++ b/composer.json
@@ -23,16 +23,34 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.0.0",
     "psr/http-message": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0"
+    "squizlabs/php_codesniffer": "^2.5",
+    "phpunit/phpunit": "^6.0|^7.0",
+    "php-http/psr7-integration-tests": "dev-master",
+    "phpstan/phpstan": "^0.9"
+  },
+  "provide": {
+    "psr/http-message-implementation": "1.0"
   },
   "autoload": {
     "psr-4": {
-      "Slim\\Psr7\\": "src",
+      "Slim\\Psr7\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
       "Slim\\Tests\\Psr7\\": "tests"
     }
+  },
+  "scripts": {
+      "test": [
+          "@phpunit",
+          "@phpcs"
+      ],
+      "phpunit": "php vendor/bin/phpunit",
+      "phpcs": "php vendor/bin/phpcs"
   }
 }
