--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,14 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "psr/http-message": "^1.0"
+    "psr/http-message": "^1.0",
+    "psr/http-factory": "^1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5",
     "phpunit/phpunit": "^6.0|^7.0",
-    "php-http/psr7-integration-tests": "dev-master"
+    "php-http/psr7-integration-tests": "dev-master",
+    "http-interop/http-factory-tests": "^0.5.0"
   },
   "provide": {
     "psr/http-message-implementation": "1.0"
