update phpstan to 0.10, fix some errors, install phpstan only for php 7.1 on travis, port of slimphp/Slim-Http#63

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5",
     "phpunit/phpunit": "^6.0|^7.0",
-    "php-http/psr7-integration-tests": "dev-master",
-    "phpstan/phpstan": "^0.9"
+    "php-http/psr7-integration-tests": "dev-master"
   },
   "provide": {
     "psr/http-message-implementation": "1.0"
