--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,17 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0",
+    "php": ">=7.1.0",
     "psr/http-message": "^1.0",
     "psr/http-factory": "^1.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^2.5",
-    "phpunit/phpunit": "^6.0|^7.0",
+    "http-interop/http-factory-tests": "^0.5.0",
+    "php-coveralls/php-coveralls": "^2.1",
     "php-http/psr7-integration-tests": "dev-master",
-    "http-interop/http-factory-tests": "^0.5.0"
+    "phpstan/phpstan": "^0.10",
+    "phpunit/phpunit": "^6.0|^7.0",
+    "squizlabs/php_codesniffer": "^3.3"
   },
   "provide": {
     "psr/http-message-implementation": "1.0"
