--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
   ],
   "require": {
     "php": ">=7.1.0",
-    "psr/http-message": "^1.0",
-    "psr/http-factory": "^1.0"
+    "fig/http-message-util":  "^1.1",
+    "psr/http-factory": "^1.0",
+    "psr/http-message": "^1.0"
   },
   "require-dev": {
     "http-interop/http-factory-tests": "^0.5.0",
