--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "psr/http-message": "^1.0"
   },
   "require-dev": {
+    "ext-json": "*",
     "http-interop/http-factory-tests": "^0.5.0",
     "php-coveralls/php-coveralls": "^2.1",
     "php-http/psr7-integration-tests": "dev-master",
