--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - if [[ "$ANALYSIS" != 'true' ]]; then vendor/bin/phpunit ; fi
   - if [[ "$ANALYSIS" == 'true' ]]; then vendor/bin/phpunit --coverage-clover clover.xml ; fi
   - if [[ "$ANALYSIS" == 'true' ]]; then vendor/bin/phpcs ; fi
-  - if [[ "$ANALYSIS" == 'true' ]]; then vendor/bin/phpstan analyse ; fi
+  - if [[ "$ANALYSIS" == 'true' ]]; then vendor/bin/phpstan analyse src; fi
 
 after_script:
   - if [[ "$ANALYSIS" == 'true' ]]; then php vendor/bin/coveralls --coverage_clover=clover.xml -v ; fi
