--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,10 +2,10 @@
 
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/7.1/phpunit.xsd"
-         backupGlobals="false"
+         backupGlobals="true"
          backupStaticAttributes="false"
          beStrictAboutTestsThatDoNotTestAnything="true"
-         beStrictAboutChangesToGlobalState="true"
+         beStrictAboutChangesToGlobalState="false"
          beStrictAboutOutputDuringTests="true"
          colors="true"
          convertErrorsToExceptions="true"
@@ -23,7 +23,7 @@
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>./src/</directory>
+            <directory suffix=".php">src/</directory>
         </whitelist>
     </filter>
 
