--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ matrix:
     - php: nightly
 
 before_script:
-  - composer update
+  - composer require php-coveralls/php-coveralls:^2.1.0
+  - composer install -n
 
 script:
   - if [[ "$ANALYSIS" != 'true' ]]; then vendor/bin/phpunit ; fi
@@ -21,5 +22,5 @@ script:
   - if [[ "$ANALYSIS" == 'true' ]]; then vendor/bin/phpcs ; fi
   - if [[ "$ANALYSIS" == 'true' ]]; then vendor/bin/phpstan analyse src; fi
 
-after_script:
-  - if [[ "$ANALYSIS" == 'true' ]]; then php vendor/bin/coveralls --coverage_clover=clover.xml -v ; fi
+after_success:
+  - if [[ "$ANALYSIS" == 'true' ]]; then vendor/bin/php-coveralls --coverage_clover=clover.xml -v ; fi
