--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,7 @@
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
+/CODE_OF_CONDUCT.md export-ignore
 /CONTRIBUTING.md    export-ignore
 /README.md          export-ignore
 /phpcs.xml          export-ignore
