--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "php": "^7.1",
     "fig/http-message-util":  "^1.1",
     "psr/http-factory": "^1.0",
-    "psr/http-message": "^1.0"
+    "psr/http-message": "^1.0",
+    "ralouphie/getallheaders": "^2"
   },
   "require-dev": {
     "ext-json": "*",
@@ -39,7 +40,6 @@
     "php-http/psr7-integration-tests": "dev-master",
     "phpstan/phpstan": "^0.10",
     "phpunit/phpunit": "^6.0|^7.0",
-    "ralouphie/getallheaders": "^2",
     "squizlabs/php_codesniffer": "^3.3"
   },
   "provide": {
