--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ matrix:
     - php: 7.2
     - php: 7.3
       env: ANALYSIS='true'
+    - php: 7.4snapshot
     - php: nightly
   allow_failures:
+    - php: 7.4snapshot
     - php: nightly
 
 before_script:
