--- a/composer.json
+++ b/composer.json
@@ -56,13 +56,13 @@
     }
   },
   "scripts": {
-      "test": [
-          "@phpunit",
-          "@phpcs",
-          "@phpstan"
-      ],
-      "phpunit": "php vendor/bin/phpunit",
-      "phpcs": "php vendor/bin/phpcs",
-      "phpstan": "php -d memory_limit=-1 vendor/bin/phpstan analyse src"
+    "test": [
+      "@phpunit",
+      "@phpcs",
+      "@phpstan"
+    ],
+    "phpunit": "phpunit",
+    "phpcs": "phpcs",
+    "phpstan": "phpstan analyse src --memory-limit=-1"
   }
 }
