--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     }
   ],
   "require": {
-    "php": "^7.1",
+    "php": "^7.2",
     "fig/http-message-util":  "^1.1.2",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
@@ -39,8 +39,8 @@
     "http-interop/http-factory-tests": "^0.6.0",
     "php-http/psr7-integration-tests": "dev-master",
     "phpstan/phpstan": "^0.10",
-    "phpunit/phpunit": "^6.0|^7.0",
-    "squizlabs/php_codesniffer": "^3.3"
+    "phpunit/phpunit": "^8.5",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "provide": {
     "psr/http-message-implementation": "1.0"
