--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,17 @@
 language: php
 
-dist: trusty
-
 matrix:
   include:
-    - php: 7.1
     - php: 7.2
     - php: 7.3
+    - php: 7.4
       env: ANALYSIS='true'
-    - php: 7.4snapshot
     - php: nightly
   allow_failures:
     - php: nightly
 
 before_script:
-  - composer require php-coveralls/php-coveralls:^2.1.0
+  - if [[ "$ANALYSIS" == 'true' ]]; then composer require php-coveralls/php-coveralls:^2.2.0 ; fi
   - composer install -n
 
 script:
