--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,14 @@
   ],
   "require": {
     "php": "^7.2",
-    "fig/http-message-util":  "^1.1.2",
+    "fig/http-message-util": "^1.1.2",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
     "ralouphie/getallheaders": "^3"
   },
   "require-dev": {
     "ext-json": "*",
+    "adriansuter/php-autoload-override": "v0.1-beta",
     "http-interop/http-factory-tests": "^0.6.0",
     "php-http/psr7-integration-tests": "dev-master",
     "phpstan/phpstan": "^0.10",
@@ -64,5 +65,8 @@
     "phpunit": "phpunit",
     "phpcs": "phpcs",
     "phpstan": "phpstan analyse src --memory-limit=-1"
+  },
+  "config": {
+    "sort-packages": true
   }
 }
