--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     "squizlabs/php_codesniffer": "^3.5"
   },
   "provide": {
-    "psr/http-message-implementation": "1.0"
+    "psr/http-message-implementation": "1.0",
+    "psr/http-factory-implementation": "1.0"
   },
   "autoload": {
     "psr-4": {
