--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
     }
   ],
   "require": {
-    "php": "^7.2 || ^8.0",
+    "php": "^7.3 || ^8.0",
     "fig/http-message-util": "^1.1.5",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
-    "ralouphie/getallheaders": "^3",
+    "ralouphie/getallheaders": "^3.0",
     "symfony/polyfill-php80": "^1.23"
   },
   "require-dev": {
@@ -40,10 +40,11 @@
     "adriansuter/php-autoload-override": "^1.2",
     "http-interop/http-factory-tests": "^0.9.0",
     "php-http/psr7-integration-tests": "dev-master",
-    "phpstan/phpstan": "^0.12",
-    "phpunit/phpunit": "^8.5 || ^9.5",
-    "squizlabs/php_codesniffer": "^3.6",
-    "weirdan/prophecy-shim": "^1.0 || ^2.0.2"
+    "phpspec/prophecy": "^1.14",
+    "phpspec/prophecy-phpunit": "^2.0",
+    "phpstan/phpstan": "^0.12.99",
+    "phpunit/phpunit": "^9.5",
+    "squizlabs/php_codesniffer": "^3.6"
   },
   "provide": {
     "psr/http-message-implementation": "1.0",
@@ -67,7 +68,7 @@
     ],
     "phpunit": "phpunit",
     "phpcs": "phpcs",
-    "phpstan": "phpstan analyse src --memory-limit=-1"
+    "phpstan": "phpstan --memory-limit=-1"
   },
   "config": {
     "sort-packages": true
