--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.0",
     "fig/http-message-util": "^1.1.5",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
