--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@
 /.gitignore         export-ignore
 /CODE_OF_CONDUCT.md export-ignore
 /CONTRIBUTING.md    export-ignore
+/MAINTAINERS.md     export-ignore
 /README.md          export-ignore
 /phpcs.xml          export-ignore
 /phpstan.neon.dist  export-ignore
