Add back tests to vendor bundles and exclude them from packagist archive

--- a/composer.json
+++ b/composer.json
@@ -72,5 +72,11 @@
   },
   "config": {
     "sort-packages": true
+  },
+  "archive": {
+      "exclude": [
+          "/tests",
+          "/phpunit.xml.dist"
+      ]
   }
 }
