--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,11 +10,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.4, 8.0, 8.1]
+        php: [7.4, 8.0, 8.1, 8.2]
         experimental: [false]
         include:
           - php: 8.1
             analysis: true
+          - php: nightly
+            experimental: true
 
     steps:
       - name: Checkout
