--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,11 +13,11 @@ jobs:
         php: [8.0, 8.1, 8.2]
         experimental: [false]
         include:
-          - php: 8.1
+          - php: 8.2
             analysis: true
 
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up PHP ${{ matrix.php }}
