--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "php": "^8.0",
     "fig/http-message-util": "^1.1.5",
     "psr/http-factory": "^1.0",
-    "psr/http-message": "^1.0",
+    "psr/http-message": "^1.0 || ^2.0",
     "ralouphie/getallheaders": "^3.0",
     "symfony/polyfill-php80": "^1.27"
   },
@@ -39,7 +39,7 @@
     "ext-json": "*",
     "adriansuter/php-autoload-override": "^1.4",
     "http-interop/http-factory-tests": "^0.9.0",
-    "php-http/psr7-integration-tests": "dev-master",
+    "php-http/psr7-integration-tests": "1.x-dev",
     "phpspec/prophecy": "^1.17",
     "phpspec/prophecy-phpunit": "^2.0",
     "phpstan/phpstan": "^1.10",
@@ -47,8 +47,8 @@
     "squizlabs/php_codesniffer": "^3.7"
   },
   "provide": {
-    "psr/http-message-implementation": "1.0",
-    "psr/http-factory-implementation": "1.0"
+    "psr/http-message-implementation": "^1.0 || ^2.0",
+    "psr/http-factory-implementation": "^1.0"
   },
   "autoload": {
     "psr-4": {
