--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,8 @@
 name: Tests
 
+permissions:
+  contents: read
+
 on: [push, pull_request]
 
 jobs:
@@ -20,7 +23,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up PHP ${{ matrix.php }}
         uses: shivammathur/setup-php@v2
@@ -29,7 +32,7 @@ jobs:
           coverage: xdebug
 
       - name: Install dependencies with Composer
-        uses: ramsey/composer-install@v2
+        uses: ramsey/composer-install@v3
 
       - name: Coding standards
         if: matrix.analysis
@@ -44,8 +47,10 @@ jobs:
 
       - name: Upload coverage results to Coveralls
         if: matrix.analysis
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          composer require php-coveralls/php-coveralls -n -W
-          vendor/bin/php-coveralls --coverage_clover=clover.xml -v
+        uses: coverallsapp/github-action@v2
+        with:
+          file: clover.xml
+          flag-name: php-${{ matrix.php }}
+          # See: https://github.com/coverallsapp/github-action?tab=readme-ov-file#complete-parallel-job-example
+          parallel: false # Until now only one job is set for analysis
+          github-token: ${{ secrets.GITHUB_TOKEN }}
