--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "ext-json": "*",
     "adriansuter/php-autoload-override": "^1.2",
     "http-interop/http-factory-tests": "^0.9.0",
-    "php-http/psr7-integration-tests": "dev-master",
+    "php-http/psr7-integration-tests": "^1.3",
     "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^8.5 || ^9.5",
     "squizlabs/php_codesniffer": "^3.6",
