--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
   "require-dev": {
     "ext-json": "*",
     "adriansuter/php-autoload-override": "^1.2",
-    "http-interop/http-factory-tests": "^0.9.0",
+    "http-interop/http-factory-tests": "^1.0 || ^2.0",
     "php-http/psr7-integration-tests": "^1.3",
     "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^8.5 || ^9.5",
