--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "http-interop/http-factory-tests": "^1.0 || ^2.0",
     "php-http/psr7-integration-tests": "^1.3",
     "phpstan/phpstan": "^0.12",
-    "phpunit/phpunit": "^8.5 || ^9.5",
+    "phpunit/phpunit": "^8.5 || ^9.5 || ^10",
     "squizlabs/php_codesniffer": "^3.6",
     "weirdan/prophecy-shim": "^1.0 || ^2.0.2"
   },
