--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,9 +10,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.2, 7.3, 7.4, 8.0, 8.1, 8.2, 8.3, 8.4]
+        php: [7.3, 7.4, 8.0, 8.1, 8.2, 8.3, 8.4]
         experimental: [false]
+        dependency-versions: ['locked']
         include:
+          - php: 7.2
+            experimental: false
+            dependency-versions: lowest
           - php: 8.0
             analysis: true
           - php: nightly
@@ -30,6 +34,8 @@ jobs:
 
       - name: Install dependencies with Composer
         uses: ramsey/composer-install@v1
+        with:
+          dependency-versions: ${{ matrix.dependency-versions }}
 
       - name: Coding standards
         if: matrix.analysis
