Use a flag for coverage

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,14 +13,18 @@ jobs:
         php: [7.3, 7.4, 8.0, 8.1, 8.2, 8.3, 8.4]
         experimental: [false]
         dependency-versions: ['locked']
+        coverage: [false]
         include:
           - php: 7.2
             experimental: false
             dependency-versions: lowest
+            coverage: false
           - php: 8.0
             analysis: true
+            coverage: false
           - php: nightly
             experimental: true
+            coverage: false
 
     steps:
       - name: Checkout
@@ -49,7 +53,7 @@ jobs:
         run: vendor/bin/phpunit --no-coverage
 
       - name: Upload coverage results to Coveralls
-        if: matrix.analysis
+        if: matrix.coverage
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
