--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
   "require-dev": {
     "ext-json": "*",
     "adriansuter/php-autoload-override": "^1.4",
-    "http-interop/http-factory-tests": "^2.0",
+    "http-interop/http-factory-tests": "^1.0 || ^2.0",
     "php-http/psr7-integration-tests": "^1.4",
     "phpspec/prophecy": "^1.19",
     "phpspec/prophecy-phpunit": "^2.2",
