--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,11 +15,13 @@ jobs:
       matrix:
         php: [8.0, 8.1, 8.2, 8.3, 8.4]
         experimental: [false]
+        composer-options: ['']
         include:
           - php: 8.2
             analysis: true
           - php: nightly
             experimental: true
+            composer-options: '--ignore-platform-req=php+'
 
     steps:
       - name: Checkout code
@@ -33,6 +35,8 @@ jobs:
 
       - name: Install dependencies with Composer
         uses: ramsey/composer-install@v3
+        with:
+          composer-options: ${{ matrix.composer-options }}
 
       - name: Coding standards
         if: matrix.analysis
