--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   },
   "require-dev": {
     "ext-json": "*",
-    "adriansuter/php-autoload-override": "^1.4",
+    "adriansuter/php-autoload-override": "^1.5|| ^2.0",
     "http-interop/http-factory-tests": "^1.0 || ^2.0",
     "php-http/psr7-integration-tests": "^1.4",
     "phpspec/prophecy": "^1.22",
